# prepaid-mate

./: .gitignore  .travis.yml  DISCLAIMER  Makefile  NOTES  README.rst  TODO.rst  app.py  barcode-scanner-client.py  config.sample  db.sqlite  index.html  pytest.ini  requirements.txt  scanner-client.py  scanner_client.py  setup.cfg  setup.py  test-requirements.txt  wsgi.py
.github/workflows/: tests.yml
deploy/etc/nginx/sites-available/: prepaid_mate
deploy/etc/systemd/system/: gunicorn.service  scanner-client.service
deploy/etc/udev/rules.d/: scanner.rules
prepaid_mate/: add_drink.py  admin.py  app.py  app_helper.py  apps.py  database_utils.py  models.py  reset_password.py  routes.py  scanner_client.py
prepaid_mate/_django/: manage.py  settings.py  urls.py  wsgi.py
prepaid_mate/static/: index.html
prepaid_mate/static/css/: index.css
prepaid_mate/static/js/: prepaidMate.js
static/: index.html
static/css/: index.css
static/js/: prepaidMate.js
tests/: conftest.py  test_account.py  test_client.py  test_drink.py  test_money.py  test_payment.py  testdb.sqlite
tests/umockdev/: barcode.events  barcode.ioctl  barcode.umockdev  rfid.events  rfid.ioctl  rfid.umockdev
