[metadata]
description = Prepaid drinks made easy with simple API, simple UI, simple rfid/barcode scanner client
long_description = file: README.rst
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
